# pi-nas-benchmarks

./: .gitignore  Makefile  README.md  block_size_test.py  plot.py  plot_bs.py  pyproject.toml
data/: 01-throttling.tsv  01-throttling2.tsv  02-bs-hdd-cifs.csv  02-bs-hdd-local.csv  02-bs-hdd-sshfs.csv  02-bs-tmpfs-laptop.csv  02-bs-tmpfs-sshfs.csv  03-bs-hdd-local.csv  04-bs-hdd-local-large.csv
