[tool.poetry]
name = "rpi_nas_bechmark"
version = "0.1.0"
description = ""
authors = ["Vasek Sraier <git@vakabus.cz>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
